ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/AntiTrustSetting__mdt/AntiTrustSetting__mdt.object-meta.xml
<CustomObject>
    <label>Anti-Trust Setting</label>
    <pluralLabel>Anti-Trust Settings</pluralLabel>
</CustomObject>