ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/AntiTrustSetting__mdt/fields/BackgroundName__c.field-meta.xml
<CustomField>
    <fullName>BackgroundName__c</fullName>
    <description>Image name in static resource package</description>
    <inlineHelpText>Image name in static resource package</inlineHelpText>
    <label>Background Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>