ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/AntiTrustSetting__mdt/fields/EmailAttachmentName__c.field-meta.xml
<CustomField>
    <fullName>EmailAttachmentName__c</fullName>
    <defaultValue>&apos;Antitrust Certificate&apos;</defaultValue>
    <label>Email Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>