ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/AntiTrustSetting__mdt/fields/EmailTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateDeveloperName__c</fullName>
    <description>Anit-Trust Completed Email Template Developer Name</description>
    <inlineHelpText>Anit-Trust Completed Email Template Developer Name</inlineHelpText>
    <label>Email Template Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>