ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/AntiTrustSetting__mdt/fields/OrganizationWideEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>OrganizationWideEmailAddress__c</fullName>
    <label>Organization-Wide Email Address</label>
    <type>Email</type>
</CustomField>